# ircparse

./: .gitignore  CMakeLists.txt  README.md
include/ircparse/: ircparse.h
src/ircparse/: CMakeLists.txt  ircparse.c
